[package]
name = "mqtt-verify"
version = "0.1.0"
authors = ["Anders Qvist <quest@lysator.liu.se>"]
edition = "2018"

[lib]
name = "mqtt_verify"
path = "src/lib.rs"

[[bin]]
name = "mqtt-verify"

[dependencies]
async-std = "~1.6"
evalexpr = "~5.0"
futures = "~0.3"
futures-ticker = "0.0.1"
log = "*"
paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust" }
snafu = "*"
stderrlog = "*"
structopt = { version = "0.3", default-features = false }

