[package]
name = "mqtt-verify"
version = "0.1.0"
authors = ["Anders Qvist <quest@lysator.liu.se>"]
edition = "2018"

[lib]
name = "mqtt_verify"
path = "src/lib.rs"

[[bin]]
name = "mqtt-verify"

[dependencies]
async-std = "~1.9"
evalexpr = "~6.1"
futures = "~0.3"
futures-ticker = "0.0.1"
futures-timer = "~3.0"
log = "*"
paho-mqtt = "~0.9"
snafu = "*"
stderrlog = "*"
structopt = { version = "0.3", default-features = false }

[dev-dependencies]
bollard = "~0.10"
rand = "~0.8"
tokio = { version = "~1.7", features = ["rt", "macros"] }
